[package]
name = "image-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "ImageData",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "console"
]}
image = "0.24"
js-sys = "0.3"